change CSS on panels to remove double scrollbar issue #300 - in filtered-toc plugin, scss to add scrolling on headings only - prevent title disappearing upwards - in page-styling, scss remove scroll on main panel - css generated from scss

--- a/Website/plugins/filtered-toc/css/filtered-toc-dark.css
+++ b/Website/plugins/filtered-toc/css/filtered-toc-dark.css
@@ -2,6 +2,8 @@
   background-color: #212426;
   border-right: 1px solid #3A3D4E;
   border-bottom: 3px solid #3A3D4E;
+  overflow-y: scroll;
+  max-height: 75vh;
 }
 .raku-sidebar .input::placeholder, .raku-sidebar .textarea::placeholder, .raku-sidebar .select select::placeholder {
   color: gainsboro;
